--- a/end.html
+++ b/end.html
@@ -138,7 +138,7 @@
                 })
                 .catch(error => {
                     console.error('Error playing video:', error);
-                    window.location.href = 'index.html';
+                    window.location.href = 'index1.html';
                 });
             }
             
